# swmm-model-simplification

./: LICENSE  README.md  pyproject.toml  requirements.txt
example/: simplify_bellinge.ipynb  simplify_bellinge.py
swmm_model_simplification/: simplifying_model.py
swmm_model_simplification/helpers/: calculate_metrics.py  config.py  create_sub_model.py  cumulative_catchment_area.py  polygons_for_swmm.py  search_algorithm.py  swmm_input_summary.py
swmm_model_simplification/workflows/: __init__.py  aggregating_subcatchments.py  calibrating_conduits.py  consolidateing_conduits.py
